user_profile: fix info size on medium screens
it was overflowing when the description was too big

--- a/app/modules/inventory/scss/_user_profile.scss
+++ b/app/modules/inventory/scss/_user_profile.scss
@@ -8,7 +8,7 @@
     width: 10em;
   }
   .info{
-    flex: 1 0 auto;
+    flex: 1 0 0;
     padding: 0.5em;
     position: relative;
   }
